objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AIA Large Group Sales Process</fullName>
        <description>AIA Large Group Sales Process [200+]</description>
        <isActive>true</isActive>
        <values>
            <fullName>ARC Approval</fullName>
        </values>
        <values>
            <fullName>Benefit Request</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Quote Delivered</fullName>
        </values>
        <values>
            <fullName>RFP</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Underwriting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ProspectingSalesProcess</fullName>
        <description>This Sales Process is used only for Prospecting Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <description>Opportunity sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ADR</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AE Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AG Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AG Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIAFromOpplineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA From OppLineitem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Account_Legal_Name__c</fullName>
        <formula>Account.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750 
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Date_of_marked_as_Dead__c</fullName>
        <description>Date to capture the date and time when the opportunity is marked as dead - US137</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of marked as Dead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AIA_Email_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA_Email_RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Lead_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For 200+ Opportunity Lead Rep Name will be populated from Account Team.</description>
        <label>Lead Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMark_this_Opportunity_as_Dead__c</fullName>
        <defaultValue>"No"</defaultValue>
        <description>As per Us 3401 , Mark this Opportunity as Dead.
dependency fields are sorting based on field APIS 
So if we want to have that field at last i.e below Won/Lost field,then we have to have api like ZMark_this_Opportunity_as_Dead__c</description>
        <label>Mark this Opportunity as Dead?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVP__c</fullName>
        <label>AVP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barbara Russo</fullName>
                </value>
                <value>
                    <fullName>Carl Repetti</fullName>
                </value>
                <value>
                    <fullName>Joe Pedone</fullName>
                </value>
                <value>
                    <fullName>Mike Casarella</fullName>
                </value>
                <value>
                    <fullName>Pam Sloan</fullName>
                </value>
                <value>
                    <fullName>Shekar Subramaniam</fullName>
                </value>
                <value>
                    <fullName>Wanda Oneferu-bey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountID18__c</fullName>
        <description>Provides the 18 character unique ID</description>
        <formula>CASESAFEID(AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Control_Plan__c</fullName>
        <formula>Text(Account.Control_Plan__c)</formula>
        <label>Control Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Jurisdiction__c</fullName>
        <formula>Text(Account.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_in_Jeopardy__c</fullName>
        <label>Account in Jeopardy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account New To Jeopardy</fullName>
                    <color>#FF0000</color>
                    <label>Account New To Jeopardy</label>
                </value>
                <value>
                    <fullName>Account Remains Jeopardy</fullName>
                    <color>#FFCC33</color>
                    <label>Account Remains Jeopardy</label>
                </value>
                <value>
                    <fullName>Account Removed From Jeopardy</fullName>
                    <color>#0B6FCE</color>
                    <label>Account Removed From Jeopardy</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#A845DC</color>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Increase__c</fullName>
        <inlineHelpText>Actual Increase from Management Report</inlineHelpText>
        <label>Actual Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Admin_Offered__c</fullName>
        <label>Admin Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>CF ASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Sold__c</fullName>
        <label>Admin Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>CF ASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agg_Spec_Ded_Offered_1__c</fullName>
        <label>Agg Spec Ded Offered 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Spec_Ded_Offered_2__c</fullName>
        <label>Agg Spec Ded Offered 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Spec_Ded_Offered_3__c</fullName>
        <label>Agg Spec Ded Offered 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agg_Spec_Ded_Sold__c</fullName>
        <label>Agg Spec Ded Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associate_VP__c</fullName>
        <label>Associate VP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carl Repetti</fullName>
                </value>
                <value>
                    <fullName>Joe Pedone</fullName>
                </value>
                <value>
                    <fullName>Mike Casarella</fullName>
                </value>
                <value>
                    <fullName>Pam Sloan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BE_Prospect_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BE Prospect ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blend_Increase__c</fullName>
        <inlineHelpText>Blend Increase from Management Report</inlineHelpText>
        <label>Blend Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Consultant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker/Consultant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>This field was deprecated during the Sales reorg effort. Became live on 1/1/2013.</description>
        <inlineHelpText>OBSOLETE: This field is superseded by a new fields: SBU, Market Segment, Division and Business Type as a unit.</inlineHelpText>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-199 Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>CFA Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>Ind Govt Programs</fullName>
                </value>
                <value>
                    <fullName>Labor New Business Sales</fullName>
                </value>
                <value>
                    <fullName>Labor Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>Local Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>National Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>NCAS Renewal Sales</fullName>
                </value>
                <value>
                    <fullName>New Business Sales</fullName>
                </value>
                <value>
                    <fullName>Regional Renewal Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Over_Currrent__c</fullName>
        <inlineHelpText>Provide % figures as provided by UW</inlineHelpText>
        <label>CF% Over Currrent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Over_Renewal__c</fullName>
        <inlineHelpText>Provide % figures as provided by UW</inlineHelpText>
        <label>CF% Over Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carefirsts_Annual_Premium__c</fullName>
        <inlineHelpText>Fully Insured Groups = Carefirst Annual Premiums 
ASO/ Self Insured Groups = Fixed fees(Admin, SL and other fees) + expected claims</inlineHelpText>
        <label>CareFirst's Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Renewal_Delivery_Date_to_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Request Changes to the Renewal Delivery Date to Sales from the Underwriter here.</inlineHelpText>
        <label>Change Renewal Delivery Date to Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseProspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloseProspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Ratio__c</fullName>
        <formula>Est_Actual_Contracts__c / Potential_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compensation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This look-up will be based off of the Lead Rep Name on the user record to be displayed on the Opportunity object.</description>
        <inlineHelpText>This look-up will be based off of the Lead Rep Name on the user record to be displayed on the Opportunity object.</inlineHelpText>
        <label>Compensation Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1ST EQUICOR</fullName>
                </value>
                <value>
                    <fullName>1ST HEALTH</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATOR</fullName>
                </value>
                <value>
                    <fullName>ADVANCE PCS</fullName>
                </value>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>AETNA GLOBAL</fullName>
                </value>
                <value>
                    <fullName>AIG LIFE</fullName>
                </value>
                <value>
                    <fullName>ALL AMERICA</fullName>
                </value>
                <value>
                    <fullName>ALLIANZ</fullName>
                </value>
                <value>
                    <fullName>ALPHA DATA</fullName>
                </value>
                <value>
                    <fullName>AMER BANKERS</fullName>
                </value>
                <value>
                    <fullName>AMER CAPITAL</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH</fullName>
                </value>
                <value>
                    <fullName>AMERITAS</fullName>
                </value>
                <value>
                    <fullName>AMER LIFE</fullName>
                </value>
                <value>
                    <fullName>ANCHOR BENEFITS</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>ANTHM BEN ADM</fullName>
                </value>
                <value>
                    <fullName>BALTO LIFE</fullName>
                </value>
                <value>
                    <fullName>BANKERS LIFE</fullName>
                </value>
                <value>
                    <fullName>BCBSND</fullName>
                </value>
                <value>
                    <fullName>BCBSNJ</fullName>
                </value>
                <value>
                    <fullName>BCBSRI</fullName>
                </value>
                <value>
                    <fullName>BCBS TRIGON</fullName>
                </value>
                <value>
                    <fullName>BCBS WEST PA</fullName>
                </value>
                <value>
                    <fullName>BC INDEPEN</fullName>
                </value>
                <value>
                    <fullName>BC NC</fullName>
                </value>
                <value>
                    <fullName>BC SC</fullName>
                </value>
                <value>
                    <fullName>BEN PLAN SRV</fullName>
                </value>
                <value>
                    <fullName>BROK CONCEPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors_Annual_Premium__c</fullName>
        <description>The Amount quoted by a carefirst competitor .</description>
        <label>Competitor's Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concat_Business_Type_UW__c</fullName>
        <description>This field was created to assist with reports that need to use a combination of Business_Type__c and Underwriting_Entity__c in a Bucket field on reports.</description>
        <formula>TEXT( Business_Type__c ) + '-' + TEXT(Underwriting_Entity__c)</formula>
        <label>Concat Business Type-UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Opportunity Details Captured", "Missing: "&amp;IF( ISPICKVAL( Type ,""),"Type, ","")&amp;""&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, "Close Date, ","")&amp;""&amp;IF( Amount &lt;= 0, "Amount, ","")&amp;""&amp;IF( ISPICKVAL( LeadSource,""), "Lead Source, ","")&amp;""&amp;IF( LEN(NextStep)=0, "Next Steps",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,""), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,""), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <description>Reason declined by Underwriting</description>
        <label>MD/DC Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Meet 50% Employer Contribution</fullName>
                </value>
                <value>
                    <fullName>Does Not Meet 75% Participation</fullName>
                </value>
                <value>
                    <fullName>Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Three Carriers In 5 Years</fullName>
                </value>
                <value>
                    <fullName>Not In Service Area</fullName>
                </value>
                <value>
                    <fullName>More than 10% Health Risk Load</fullName>
                </value>
                <value>
                    <fullName>Never Received Requested Information</fullName>
                </value>
                <value>
                    <fullName>Poor Risk</fullName>
                </value>
                <value>
                    <fullName>Poor Experience</fullName>
                </value>
                <value>
                    <fullName>Claims Experience Not Available</fullName>
                </value>
                <value>
                    <fullName>High Demographic Factor</fullName>
                </value>
                <value>
                    <fullName>High Loss Ratio</fullName>
                </value>
                <value>
                    <fullName>Substandard Population</fullName>
                </value>
                <value>
                    <fullName>Former CareFirst Group</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Not Licensed to Sell In Area</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivered_Increase__c</fullName>
        <inlineHelpText>Delivered Increase from Management Report</inlineHelpText>
        <label>Delivered Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Demo_Increase__c</fullName>
        <inlineHelpText>Demo Increase from Management Report</inlineHelpText>
        <label>Demo Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dental_Account_in_Jeopardy__c</fullName>
        <label>Dental Account in Jeopardy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account New To Jeopardy</fullName>
                </value>
                <value>
                    <fullName>Account Remains Jeopardy</fullName>
                </value>
                <value>
                    <fullName>Account Removed From Jeopardy</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Competitor_Name__c</fullName>
        <label>Dental Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Ameritas</fullName>
                </value>
                <value>
                    <fullName>CIGNA Dental</fullName>
                </value>
                <value>
                    <fullName>Delta Dental</fullName>
                </value>
                <value>
                    <fullName>Dental Insur</fullName>
                </value>
                <value>
                    <fullName>Dentaquest</fullName>
                </value>
                <value>
                    <fullName>Dominion</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>MetLife</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>United Concordia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Jeopardy_Issues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Why is Dental in Jeopardy?</inlineHelpText>
        <label>Dental Jeopardy Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Plus_Broker_CF_Hub__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Direct Broker Plus/CF Hub is an agency that processes enrollment changes, proposal generation, new group quoting and new group installation on CF Hub.  These agencies are also able to view group billing documentation and address billing inquiries.</inlineHelpText>
        <label>Direct Plus Broker / CF Hub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment_New__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>51-199 New Business</fullName>
                </value>
                <value>
                    <fullName>51-199 Renewals</fullName>
                </value>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>Commercial Business</fullName>
                </value>
                <value>
                    <fullName>FEHBP Account Management</fullName>
                </value>
                <value>
                    <fullName>Labor Affairs</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>State &amp; Municipalities</fullName>
                </value>
                <value>
                    <fullName>Healthcare/Education/Par</fullName>
                </value>
                <value>
                    <fullName>Strategic Accounts 1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_Variance__c</fullName>
        <formula>IF(Carefirsts_Annual_Premium__c&gt;0&amp;&amp;Competitors_Annual_Premium__c&gt;0,Carefirsts_Annual_Premium__c  - Competitors_Annual_Premium__c,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dollar Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AON Exchange</fullName>
                </value>
                <value>
                    <fullName>CareFirst Connect</fullName>
                </value>
                <value>
                    <fullName>CF Private Exchange</fullName>
                </value>
                <value>
                    <fullName>DBE/Admin</fullName>
                </value>
                <value>
                    <fullName>Direct Auto</fullName>
                </value>
                <value>
                    <fullName>Direct Plus/CF Hub</fullName>
                </value>
                <value>
                    <fullName>Other/CF Hub</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Actual_Contracts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Est. Actual Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Complete__c</fullName>
        <label>Estimate Complete (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Actual_Contracts__c</fullName>
        <description>Formula to utilize the manual value for estimated actual contracts for older opps, and the calculated formula for newer opps</description>
        <formula>/*** 03/25/11 - Tom Barrett
   Changed so that the Product related list contract counts where used anytime the
   user enter related product contract counts.
***/
IF(Test_Total_Contracts__c &gt; 1.5, Test_Total_Contracts__c, Est_Actual_Contracts__c) 

/*03/25/11 - Tom Barrett
IF(  Effective_Date__c   &gt;  DATE(2011,03,06)
     ||  Est_Actual_Contracts__c  = 0 ||  Len( TEXT(Est_Actual_Contracts__c)) = 0,
       Test_Total_Contracts__c,
        Est_Actual_Contracts__c
)
*/</formula>
        <inlineHelpText>Contract counts exclude ancillaries</inlineHelpText>
        <label>Estimated Actual Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Actuals__c</fullName>
        <description>This field rolls up all medical product quantities from the product related list. 
Used in the current (4/17/2013) Enrollment process - Potential_contracts_new__c formula field.</description>
        <label>Estimated Actuals</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>lessThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Facets Number + Effective Date + Record Type</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>